# dogv-ai

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.es.md  README.md  chainlit.md  docker-compose.yml  pyproject.toml  requirements.txt
.chainlit/: config.toml
agent/: graph.py  shared.py
api/: __init__.py  answer.py  answer_fallback.py  answer_mutators.py  answer_validator.py  auto_ingest.py  bis_editions.py  build_info.py  classify.py  config.py  db.py  doc_references.py  dogv_resolver.py  dogv_urls.py  edition_recency.py  embed.py  enumeration.py  field_anchor.py  identifiers.py  ingest_pipeline.py  intent.py  llm.py  llm_client.py  main.py  models.py  ollama.py  query_classifiers.py  query_expansion.py  reader.py  reader_extractors.py  readiness.py  rerank.py  retrieval.py  taxonomy.py  temporal.py  text_cleaning.py  text_tokens.py  traces.py
assets/: README.md
data/: eval_answer_demo_scripted5.json  eval_answer_demo_v1.json  eval_audit_report.json  eval_ondemand_gold.json  eval_schema.json  eval_set.json  eval_set_hard.json  temporal_suite_after_gap_guard_20260207T175705Z.csv  temporal_suite_after_gap_guard_20260207T175705Z.json  temporal_suite_no_ingest_20260207T162630Z.csv  temporal_suite_no_ingest_20260207T162630Z.json
docs/: CONFIG.md  EVALS.md  REPO_META.md  demo_plan.md  demo_rehearsal_log.md  demo_runbook.md  demo_script.md  identifier_layer_design.md  ondemand_historical_fetch_plan.md  status_20260527.md  status_20260527_pm.md
eval_v2/: altgold.py  build_set.py  collect_answers.py  collect_multiturn.py  facts.py  judge.py  make_holdout.py  mine.py  regress_diff.py  retrieval_metrics.py  retrieval_probe.py  score_answers.py
ops/: README.md  dogv-api.service  dogv-chainlit.service  dogv-chat.service  dogv-daily-ingest.service  dogv-daily-ingest.timer  dogv-embed.service  dogv.target
public/: gv-theme.css
scripts/: __init__.py  _path.py  audit_eval_coverage.py  audit_eval_set.py  build_chunks.py  build_doc_identifiers.py  build_doc_references.py  build_eval_set.py  build_eval_set_notemporal.py  check_answer_eval_gate.py  check_eval_regression.py  classify_documents.py  curate_eval_set_v2.py  debug_issue_json.py  demo_ctl.sh  demo_release_gate.sh  demo_smoke.py  download_assets.py  download_html.py  download_pdfs.py  download_utils.py  dump_issue_for_compare.py  eval_ondemand_resolver.py  eval_v2_citation_check.py  extract_documents.py  (+19 more)
(+169 files in other folders)
